Fix horizontal alignment issue in image ellipses.

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ body {
   width: 100%;
   color: #191919;
   overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 .dark html,
